# grabby-helm

./: .gitignore  CLEANUP_SUMMARY.md  Dockerfile  ENHANCED_CLI_DEMO.md  ENHANCED_WORKFLOW_DEMO.md  GEMINI.md  IMPLEMENTATION_ROADMAP.md  IMPROVEMENT_SUGGESTIONS.md  README.md  config.example.yaml  pyproject.toml  quick-test-setup.md  requirements-dev.txt
demo-chart/: Chart.yaml  EXPORT.md  values.yaml
demo-chart/templates/: configmaps-app-config.yaml  deployment-demo-app.yaml  deployments-nginx-app.yaml  service-demo-app.yaml  services-nginx-service.yaml
docs/: api_reference.rst  conf.py
enhanced-example/: Chart.yaml  EXPORT.md  values.yaml
enhanced-example/templates/: configmaps-app-config.yaml  deployments-my-production-app.yaml  persistentvolumeclaims-data-storage.yaml  services-my-production-app.yaml
enhanced-test/: .helmignore  Chart.yaml  values.yaml
namespace-test/: Chart.yaml  values.yaml
packaging/rpm/: build_rpm.sh  rancher-helm-exporter.spec
scripts/: bash_completion.sh  install_fedora.sh  install_no_sudo.sh  prepare_offline_bundle.py
scripts/systemd/: rancher-helm-exporter.timer  rancher-helm-exporter@.service  setup_systemd.sh  user-service-setup.sh
src/rancher_helm_exporter/: __init__.py  __main__.py  chart_generator.py  cli.py  (+14 more)
src/rancher_helm_exporter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
test-output/: Chart.yaml
tests/: test_auto_scope.py  test_comprehensive_extraction.py  test_config_management.py  test_new_cli.py  test_utils.py
validation-chart/: .helmignore  Chart.yaml  EXPORT.md  values.yaml
(+23 files in other folders)
